Stop overwriting overwritten overflow (#1655)

--- a/scss/layout/Layout.scss
+++ b/scss/layout/Layout.scss
@@ -8,10 +8,6 @@ body,
 
 .layout {
     min-width: 800px;
-
-    &--modal {
-        overflow-y: hidden;
-    }
 }
 
 .row-eq-height {
